2012-06-21  Kenneth Russell  <kbr@google.com>

        [chromium] Layout Test fast/speech/scripted/speechgrammar-basics.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=89717

        Unreviewed. Added suppression for flaky crash.

        * platform/chromium/TestExpectations:

2012-06-21  Julien Chaffraix  <jchaffraix@webkit.org>

        Add support for the grid and inline-grid display types.
        https://bugs.webkit.org/show_bug.cgi?id=60732

        Reviewed by Tony Chang.

        Based on an earlier patch by David Hyatt <hyatt@apple.com>.

        * fast/css-grid-layout/containing-block-grids-expected.html: Added.
        * fast/css-grid-layout/containing-block-grids.html: Added.
        * fast/css-grid-layout/floating-empty-grids-expected.html: Added.
        * fast/css-grid-layout/floating-empty-grids.html: Added.

2012-06-21  Kenneth Russell  <kbr@google.com>

        [chromium] Layout test failures after fixing GraphicsLayerChromium scale factors
        https://bugs.webkit.org/show_bug.cgi?id=89702

        Unreviewed TestExpectations update to suppress failures.

        * platform/chromium/TestExpectations:

2012-06-21  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r120945.
        http://trac.webkit.org/changeset/120945
        https://bugs.webkit.org/show_bug.cgi?id=89703

        editing/shadow/breaking-editing-boundaries.html started to
        crash (Requested by hayato on #webkit).

        * fast/dom/shadow/shadow-dom-event-dispatching-expected.txt:

2012-06-21  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: Fix layout tests to clear previous database structures
        https://bugs.webkit.org/show_bug.cgi?id=89609

        Reviewed by Tony Chang.

        A handful of tests weren't deleting previously created stores (or the whole
        database), which made them fail if trivially re-run in Chromium or under
        NRWT with --iterations=2.
