@@ -1,3 +1,15 @@
+2012-06-21  Gregg Tavares  <gman@google.com>
+
+        Make GL error messages consistent in LayoutTests
+        https://bugs.webkit.org/show_bug.cgi?id=89689
+
+        Reviewed by Kenneth Russell.
+
+        * fast/canvas/webgl/resources/webgl-test.js:
+        (shouldGenerateGLError):
+        (glErrorShouldBe):
+        * fast/canvas/webgl/webgl-depth-texture-expected.txt:
+
 2012-06-21  Kenneth Russell  <kbr@google.com>
 
         [chromium] Layout Test fast/speech/scripted/speechgrammar-basics.html is flaky
